zadanie1/pod-mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-sql
  namespace: backend
  labels:
    app: my-sql
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
            - key: kubernetes.io/hostname
              operator: In
              values:
                - minikube-m04
  containers:
  - name: mysql
    image: mysql:8
    resources:
      limits:
        memory: "512Mi"
        cpu: "600m"
      requests:
        memory: "512Mi"
        cpu: "100m"
    ports:
    - containerPort: 3306
