zadanie1/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: my-sql
  ports:
  - port: 3306
    targetPort: 3306
